exercice 5 mobile OK

--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
         </div>
     </div>
     <h1>V - responsive layout</h1>
+    <p>Please follow this <a href="V-responsive_layout.html">LINK</a></p>
 </body>
 </html>
