exercice 5 desktop OK

--- a/V-responsive_layout.html
+++ b/V-responsive_layout.html
@@ -16,10 +16,10 @@
     <div class="container">
 
         <header class="row">
-            <div class="col-4">
+            <div class="col-4 col-md-3">
                 <div class="inside">Logo</div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-9">
                 <div class="inside">Titre</div>    
             </div>
         </header>
@@ -31,28 +31,25 @@
         </div>
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-4">
                 <div class="inside">Zone 1</div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12">
+                
+            <div class="col-12 col-md-4">
                 <div class="inside">Zone 2</div>
             </div>
-        </div>
+        
 
-        <div class="row">
-            <div class="col-12">
+            <div class="col-12  col-md-4">
                 <div class="inside">Zone 3</div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-8">
+            <div class="col-8 col-md-6">
                 <div class="inside">Zone 5</div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-md-6">
                 <div class="inside">Zone 6</div>
             </div>
         </div>
